# seller_with_wsl

./: .dockerignore  .env.example  .gitignore  .smitheryrc.json  API_KEYS_STATUS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  activate.sh  demo_workflow.py  docker-compose.yml  gemini.md  nginx.conf  package-lock.json  package.json  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  test_api_connections.py  test_mock_collection.py  test_product_collection.py
demo_data/categories/: standard_categories.json  zentrade_mappings.json
demo_data/pricing/: pricing_rules.json
docs/: DEPLOYMENT.md  SETUP.md  api_supplier_ownerclan.md  domeggook_api_spec.md  dropshipping_prd_v2.md  dropshipping_prd_v_1.md  ownerclan_api_spec.md
dropshipping/: config.py  main.py
dropshipping/ai_processors/: README.md  __init__.py  base.py  html_cleaner.py  image_processor.py  model_router.py  pipeline.py  product_enhancer.py
dropshipping/api/: __init__.py  dependencies.py  main.py  middleware.py
dropshipping/db/: migrate.py  schema.sql  seed_data.sql  (+2 more)
examples/: ai_enhancer_example.py  ai_pipeline_example.py  domeme_example.py  ownerclan_example.py  uploader_example.py
scripts/: cleanup_images.py  demo.py  integration_test.py
systemd/: dropshipping-api.service  dropshipping-monitoring.service  dropshipping-scheduler.service  install.sh
tests/: conftest.py  test_category_mapper.py  test_config.py  test_fetchers.py  test_order_management.py  test_pricing_engine.py  test_sourcing_intelligence.py
tools/: claude-mcp-server.cjs  claude-mcp-server.mjs
(+142 files in other folders)
