[tool.poetry]
name = "dropshipping-automation"
version = "0.1.0"
description = "드랍쉬핑 자동화 시스템 - 공급사 상품 수집부터 마켓플레이스 업로드까지 완전 자동화"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "dropshipping"}]

[tool.poetry.dependencies]
python = "^3.11"
supabase = "^2.0.0"
httpx = "^0.25.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
pandas = "^2.1.0"
openpyxl = "^3.1.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
click = "^8.1.0"
tenacity = "^8.2.0"
loguru = "^0.7.0"
apscheduler = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
black = "^23.9.0"
ruff = "^0.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.group.ai.dependencies]
ollama = "^0.1.0"
google-generativeai = "^0.3.0"
pillow = "^10.1.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q --strict-markers --cov=dropshipping"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"